# blind-quadruped-locomotion

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  glossary.md
docs/00_foundations/: 01_mdp_and_returns.md  02_policy_gradients.md  03_variance_and_gae.md  04_ppo.md  05_continuous_control.md
docs/10_isaaclab/: README.md
docs/20_locomotion/: README.md
docs/30_teacher/: README.md
docs/40_distillation/: README.md
docs/50_vision/: README.md
notes/: experiment_log.md
source/quadruped_distill/: __init__.py
source/quadruped_distill/algorithms/distill/: __init__.py
source/quadruped_distill/algorithms/ppo/: __init__.py  a2c.py  common.py  ppo_continuous.py  ppo_discrete.py  reinforce.py  reinforce_baseline.py
source/quadruped_distill/assets/: __init__.py
source/quadruped_distill/mdp/: __init__.py
source/quadruped_distill/tasks/: __init__.py
source/quadruped_distill/tasks/flat/: __init__.py
source/quadruped_distill/tasks/rough/: __init__.py
tests/: test_gae.py
