[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quadruped_distill"
version = "0.1.0"
description = "Learning blind quadruped locomotion: from-scratch PPO to teacher-student distillation on Unitree Go2 in Isaac Lab."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ishaan Mondal", email = "ishaanmondal2005@gmail.com" }]
# Phase 0 deps only. torch + Isaac Lab come from the project .venv (see docs/10_isaaclab/).
dependencies = ["gymnasium>=1.0", "numpy", "tensorboard"]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.setuptools.packages.find]
where = ["source"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines tolerated in docstrings/equations

[tool.pytest.ini_options]
testpaths = ["tests"]
